WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21145
Console message repeat count wrong when typing commands between repeated messages
https://bugs.webkit.org/show_bug.cgi?id=21145
Summary
Console message repeat count wrong when typing commands between repeated mess...
Timothy Hatcher
Reported
2008-09-26 09:15:47 PDT
Type this into the console: console.log("Test"); console.log("Test"); console.log("Test"); console.log("Test"); You should see 4 Test messages interleaved with the user command. Instead you see interleaved messages incrementally with larger repeat counts.
Attachments
Proposed patch
(7.86 KB, patch)
2008-09-26 10:03 PDT
,
Timothy Hatcher
kmccullough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2008-09-26 10:03:59 PDT
Created
attachment 23852
[details]
Proposed patch
Kevin McCullough
Comment 2
2008-09-26 10:18:53 PDT
Comment on
attachment 23852
[details]
Proposed patch does this fix the count in the bottom right corner? I only see you changing msg.repeatCount but for WebInspector.warnings/errors you still use msg.repeatDelta otherwise r=me
Timothy Hatcher
Comment 3
2008-09-26 10:22:16 PDT
The count in the corner was not affected and was working before.
Timothy Hatcher
Comment 4
2008-09-26 10:28:07 PDT
Landed in
r36958
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug