        Fixes a bug where the console message repeat count would be wrong         when typing commands in between repeated messages.

https://bugs.webkit.org/show_bug.cgi?id=21145

        Reviewed by Kevin McCullough.

        * page/InspectorController.cpp:
        (WebCore::InspectorController::clearConsoleMessages): Reset m_groupLevel.
        (WebCore::InspectorController::didCommitLoad): Call clearConsoleMessages.
        * page/inspector/Console.js:
        (WebInspector.Console.prototype.addMessage): Remember the original repeat count
        for each message as totalRepeatCount, since we now modify repeatCount to mean
        repeats since previous console command. If repeatCountBeforeCommand is a number,
        subtract that value from the repeatCount.
        (WebInspector.Console.prototype.clearMessages): Delete the repeatCountBeforeCommand
        and commandSincePreviousMessage properties.

Canonical link: https://commits.webkit.org/29227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36958 268f45cc-cd09-0410-ab3c-d52691b4dbfc